potential fix for poor performance on iOS

--- a/critical.css
+++ b/critical.css
@@ -11,7 +11,7 @@ margin:0;
 
 
 /* default styling */
-@media only screen and (min-width: 850px) and (max-width: 2160px) {
+@media only screen and (min-width: 850px) {
     
 
 h2 {
@@ -192,7 +192,7 @@ body {
     color: #F6F6F6;
 }
 }
-@media only screen and (min-width: 601px) and (max-width: 2160px) {
+@media only screen and (min-width: 601px) {
     .header-wrapper {
     display: flex;
     justify-content: flex-end;
@@ -240,7 +240,7 @@ body {
 }
 }
 /*title*/
-@media only screen and (min-width: 930px) and (max-width: 2160px) {
+@media only screen and (min-width: 930px) {
 .title-wrapper {
     width: 89vw;
     margin-left: 10vw;
@@ -404,7 +404,7 @@ width: 70vw;
 }
 @keyframes side-load {
     0% {
-        transform: translateX(-100%);
+        transform: translateX(-100%) translateZ(0);
         opacity: 0;
     }
     
